# routes/bootcamps.js
@@ -9,6 +9,8 @@ BootcampRouter.route('/:id')
   .get(asyncMiddleware(BootcampController.getBootcamp))
   .put(asyncMiddleware(BootcampController.updateBootcamp))
   .delete(asyncMiddleware(BootcampController.deleteBootcamp));
+BootcampRouter.route('/:bootcampId/courses')
+  .get(asyncMiddleware(BootcampController.getCoursesByBootcampId));
 BootcampRouter.route('/radius/:zipcode/:distance')
   .get(asyncMiddleware(BootcampController.getBootcampsWithGeoData));
 
